code cleanup, add tests
